ipc/ipdl/test/ipdl/error/managerNoCtor.ipdl
include protocol managedNoCtor;

protocol managerNoCtor {
    manages managedNoCtor;

parent:
    // error: no ctor defined
};
